--- a/components/navigation/index.css
+++ b/components/navigation/index.css
@@ -49,7 +49,7 @@
     justify-content: center;
     align-self: center;
     position: fixed;
-    z-index: calc(var(--z-overlay) + 999);
+    z-index: var(--z-overlay);
     top: 0;
     left: 0;
     transition: all .3s;
